--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.5.0",
-    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -32,6 +31,7 @@
     "mongoose": "^6.7.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
