--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.5.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
