--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "binary-upload-boom-react",
   "version": "1.0.0",
+  "engines": {
+    "node": "v18.11.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
