--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "client": "npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "build": "npm run build --prefix ../client",
+    "build": "npm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
