--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client",
+  "name": "binary-upload-boom-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:2121",
+  "proxy": "eval $(grep '^VITE_PROXY' .env)",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
