--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   "scripts": {
     "start": "node server.js",
     "client": "npm run dev --prefix ../client",
+    "client-build": "npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "build": "npm run build",
+    "server-build": "npm run build",
+    "build": "concurrently \"npm run server-build\" \"npm run client-build\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
