--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
     "client-build": "npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "server-build": "npm run build",
-    "build": "concurrently \"npm run server-build\" \"npm run client-build\"",
+    "build": "npm run build",
+    "group-build": "concurrently \"npm run server-build\" \"npm run client-build\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
