--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js --prefix /server",
+    "start": "node server.js",
     "client": "npm run dev --prefix ../client",
     "client-build": "npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1",
