--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "scripts": {
     "start": "node server.js",
     "client": "npm run dev --prefix ../client",
-    "client-build": "npm run build --prefix ../client",
+    "client-build": "npm run build --prefix ./client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-  
-    "group-build": "concurrently \"npm run server-build\" \"npm run client-build\"",
+    "server-build": "npm run build --prefix "./server",
+    "build": "concurrently \"npm run server-build\" \"npm run client-build\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
