--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "server-build": "npm run build --prefix ./server",
-    "build": "concurrently \"npm run server-build\" \"npm run client-build\"",
+    "build": "npm run client-build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
