--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "vite": "^3.2.0"
+
   }
 }
