--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "sass": "^1.57.1",
     "vite": "^3.2.0"
 
   }
