--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vite build",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm insall && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,6 +21,11 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "sass": "^1.57.1",
     "vite": "^3.2.0"
   },
   "devDependencies": {
