--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "start": "node server.js",
     "client": "npm run dev --prefix ../client",
-    "client-build": "npm run build --prefix ../client",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
