--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm start --prefix ./server",
+    "start": "npm run start --prefix ./server",
     "client-build": "npm run build --prefix ./client",
     "build": "npm run client-build"
   },
