--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "client": "npm run dev --prefix ../client",
-    "server": "node server.js",
+    "server": "npm install && node server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
