--- a/package.json
+++ b/package.json
@@ -7,14 +7,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js --prefix /server",
-    "client": "npm run dev --prefix ../client",
-    "client-build": "npm run build --prefix ../client",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-  
-    "group-build": "concurrently \"npm run server-build\" \"npm run client-build\"",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "node server.js",
+    "build": "npm run build --prefix ./client"
   },
   "keywords": [],
   "author": "",
