--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run server --prefix ./server",
-    "client-build": "npm run build --prefix ./client",
-    "build": "npm run client-build"
+    "start": "node server",
+    "build": "npm run build --prefix ./client"
   },
   "keywords": [],
   "author": "",
