--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run server",
+    "start": "node server.js",
     "build": "npm run build --prefix ./client"
   },
   "keywords": [],
