--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "vite build",
     "dev": "vite",
-    "build": "vite build",
+    "build": "CI=false vite build",
     "preview": "vite preview"
   },
   "dependencies": {
